[tool.poetry]
name = "measure"
version = "0.1.0"
description = "Unit-of-measure types."
authors = ["Jed Hsu <jed.hsu@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
